[4177] Add table representation support
Bug: https://github.com/eclipse-sirius/sirius-web/issues/4177
Signed-off-by: Florian ROUËNÉ <florian.rouene@obeosoft.com>